added titles and descriptions to pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
+<% title "About" %>
+<% description "What, where, who and why information about Detention Logs, a new independent project committed to transparency and accountability in Australia’s immigration detention network." %>
+
 <%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
