--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -1,3 +1,8 @@
+<% title "Contribute" %>
+
+<% description "Find out how you can help improve and expand the Detention Logs project." %>
+
+
 <%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
