--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -1,3 +1,8 @@
+<% title 'Glossary' %>
+
+<% description "A glossary of terms and abbreviations used in Australian Government Department of immigration and Citizenship documents." %>
+
+
 <%= render 'layouts/header' %>
 
     <article role="main" class="main reading glossary">
