--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -1,3 +1,7 @@
+<% title 'Investigations' %>
+
+<% description 'A list of artilces that draw on data published by Detention Logs or relate to the project. They cover broad areas of immigration detention including suicide, hunger strikes and deportations, and tell these stories in many different ways.' %>
+
 <%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
