--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -1,3 +1,7 @@
+<% title 'Our Principles' %>
+
+<% description 'The principles that the Detention Logs project draws on to make journalistic, design and technology choices.' %>
+
 <%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
