--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Detention Logs</title>
+        <title><%= yield(:title) %> | Detention Logs</title>
 
         <meta name="author" content="Detention Logs">
-        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
+        <meta name="description" content="<%= yield(:description)%>">
         <meta name="viewport" content="width=device-width">
 	    <%= stylesheet_link_tag    "style", :media => "all" %>
 	    <%= csrf_meta_tag %>
