Updated colour alert codes.
Source: http://www.aph.gov.au/~/media/Estimates/Live/legcon_ctte/estimates/bud_1112/diac/BE11-0372.ashx
- The Federal Parliament Legal and Constitutional Affairs Legislation Committee

Parent page here: http://www.aph.gov.au/Parliamentary_Business/Senate_Estimates/legconctte/estimates/bud1112/diac/index

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -44,29 +44,43 @@
 		<dt id="CICC">Christmas Island Construction Camp</dt>
 		<dd>The Construction Camp was first built in 2002 to accommodate construction workers for the new <a href="#North-West-Point-Immigration-Facility">North West Point Immigration Facility</a> on Christmas Island. It was converted to an Alternative Place of Detention in 2008 and is located adjacent to the Phosphate Hill facility. It has a capacity of up to 310 people. DIAC accommodates unaccompanied minor, families, women and other groups classifies as ‘vulnerable’ in the camp. In 2009, the Australian Human Rights Commission found that the Construction camp is “not appropriate for unaccompanied minors or families with children” and that its classifcation as an ‘alternative temporary detention in the community’ was misleading. Photos can be found at <a href="http://www.humanrights.gov.au/publications/2009-immigration-detention-and-offshore-processing-christmas-island">11.3</a> in the HRC report.</dd>
 		
+(see: http://www.aph.gov.au/~/media/Estimates/Live/legcon_ctte/estimates/bud_1112/diac/BE11-0372.ashx from The Federal Parliament Legal and Constitutional Affairs Legislation Committee)
+		
 		<dt id="Code-Red">Code Red</dt>
-		<dd>Fire hazard</dd>
+		<dd>Fire</dd>
 		
-		<dt id="Code-Yellow">Code Yellow</dt>
-		<dd>Self harm attempts.</dd>
-		
-		<dd>Example: Incident 1&#8211;3DWZJJ, incident 1&#8211;3H6LHL.</dd>
+		<dt id="Code-Orange">Code Orange</dt>
+		<dd>Evacuation</dd>
 		
 		<dt id="Code-Green">Code Green</dt>
-		<dd>Detainee escape.</dd>
+		<dd>Escape or security breach</dd>
+		
+		<dt id="Code-Purple">Code Purple</dt>
+		<dd>Bomb threat</dd>
 		
 		<dd>Example: Incident 1&#8211;3I11M1</dd>
 		
 		<dt id="Code-Black">Code Black</dt>
-		<dd>Threats of assault</dd>
+		<dd>Officer needs assistance</dd>
 		
 		<dt id="Code-Blue">Code Blue</dt>
-		<dd>Detainee injured or hurt</dd>
+		<dd>Medical emergency</dd>
 		
 		<dd>Example: Incident 1&#8211;2YYRDL</dd>
 		
-		<dt id="Code-Purple">Code Purple</dt>
-		<dd>Minor disturbances and scuffles between clients</dd>
+		<dt id="Code-White">Code White</dt>
+		<dd>Staff search immediate work area</dd>
+		
+		<dt id="Code-Yellow">Code Yellow</dt>
+		<dd>Internal emergency</dd>
+		
+		<dd>Example: Incident 1&#8211;3DWZJJ, incident 1&#8211;3H6LHL.</dd>
+		
+		<dt id="Code-Brown">Code Brown</dt>
+		<dd>External emergency</dd>
+		
+		<dt id="Code-Grey">Code Grey</dt>
+		<dd>Major disturbance</dd>
 		
 		<dt id="CIIDC">CIIDC</dt>
 		<dd>Christmas Island Immigration Detention Centre</dd>
