--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -96,7 +96,7 @@
 		<dt id="Curtin-IDC">Curtin IDC</dt>
 		<dd><p>The Curtin Detention Centre is located at Curtin RAAF Base, <a href="https://maps.google.com.au/maps?q=Map+Curtin+Detention+Centre&amp;hl=en&amp;ll=-17.573339,123.826904&amp;spn=1.013317,1.227722&amp;t=h&amp;z=9">Derby Highway</a> Derby WA 6728 in the Kimberley Region in northwest Australia on the site of Curtin Airforce base. Its postal address is SERCO, PO Box 720, Derby WA 6728. The public cannot enter the base which adds to the isolation of the Centre. The Centre was closed by the Howard government after protests from detainees. It<a href="http://www.abc.net.au/news/2013-05-10/families-begin-arriving-at-curtin-detention-centre/4682768">reopened</a> for single men only in 2010. In early May, 2013, the Gillard government moved 138 men,women and children into the Centre.</p>
 		<p>Here is an <a href="http://www.google.com.au/imgres?imgurl=http://resources1.news.com.au/images/2010/08/23/1225908/955825-curtin-detention-centre.jpg&amp;imgrefurl=http://www.theaustralian.com.au/national-affairs/immigration/curtin-to-reopen-for-kids/story-fn9hm1gu-1226625452684&amp;h=366&amp;w=650&amp;sz=63&amp;tbnid=_mQGpAxNn3Jq_M:&amp;tbnh=76&amp;tbnw=135&amp;zoom=1&amp;usg=__eC0_xaZkGnLcCHy9MUAtcTOstjI=&amp;docid=wxUuIUXubKbFfM&amp;sa=X&amp;ei=hmibUc_GK-yXiAey7YDgAQ&amp;ved=0CEoQ9QEwBQ&amp;dur=468">aerial shot</a> of the IDC.</p>
-		<p>In 2010, the Centre expanded from a capacity of <a href="http://www.abc.net.au/local/stories/2011/12/30/3400015.htm?site=kimberley">600 to 1200</a>. According to the Department, it has a ‘contingent’ capacity of 1500.</dd>
+		<p>In 2010, the Centre expanded from a capacity of <a href="http://www.abc.net.au/local/stories/2011/12/30/3400015.htm?site=kimberley">600 to 1200</a>. According to the Department, it has a ‘contingent’ capacity of 1500.</p>
 		<ul>
 			<li><a href="http://en.wikipedia.org/wiki/Curtin_Immigration_Reception_and_Processing_Centre">Curtin Immigration Detention Center at Wikipedia</a>.</li>
 		</ul>
@@ -157,7 +157,7 @@
 		 <ul>
 		 	<li><a href="https://www.humanrights.gov.au/publications/2011-immigration-detention-leonora">Human Rights Commission report on Leonora</a></li>
 			<li><a href="https://www.humanrights.gov.au/publications/diac-response-2011-australian-human-rights-commission-statement-immigration-detention-1">DIAC response</a></li>
-		 	<li><a href="https://www.humanrights.gov.au/publications/photos-immigration-detention-leonora-2011">Photos</a></dd></li>
+		 	<li><a href="https://www.humanrights.gov.au/publications/photos-immigration-detention-leonora-2011">Photos</a></li>
 		</ul>
 		</dd>
 		
