commented out this reference link until the markup of the glossary can be changed from a definition list to a series of headings and paragraphs.

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -44,7 +44,7 @@
 		<dt id="CICC">Christmas Island Construction Camp</dt>
 		<dd>The Construction Camp was first built in 2002 to accommodate construction workers for the new <a href="#North-West-Point-Immigration-Facility">North West Point Immigration Facility</a> on Christmas Island. It was converted to an Alternative Place of Detention in 2008 and is located adjacent to the Phosphate Hill facility. It has a capacity of up to 310 people. DIAC accommodates unaccompanied minor, families, women and other groups classifies as ‘vulnerable’ in the camp. In 2009, the Australian Human Rights Commission found that the Construction camp is “not appropriate for unaccompanied minors or families with children” and that its classifcation as an ‘alternative temporary detention in the community’ was misleading. Photos can be found at <a href="http://www.humanrights.gov.au/publications/2009-immigration-detention-and-offshore-processing-christmas-island">11.3</a> in the HRC report.</dd>
 		
-(see: http://www.aph.gov.au/~/media/Estimates/Live/legcon_ctte/estimates/bud_1112/diac/BE11-0372.ashx from The Federal Parliament Legal and Constitutional Affairs Legislation Committee)
+<!-- <p>see: http://www.aph.gov.au/~/media/Estimates/Live/legcon_ctte/estimates/bud_1112/diac/BE11-0372.ashx from The Federal Parliament Legal and Constitutional Affairs Legislation Committee)</p> -->
 		
 		<dt id="Code-Red">Code Red</dt>
 		<dd>Fire</dd>
