get results for title

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,3 +1,5 @@
+<% title incidentexplorer_results %>
+
 <section class="main incident-explorer" role="">
 <h1>Incident Explorer</h1>
 <section class="discrete">
