--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,6 +1,6 @@
 <% title incidentexplorer_results %>
-
 <section class="main incident-explorer" role="">
+<% description "Explore an index of 'incident reports' recorded by staff at Australia’s immigration detention facilities." %>
 <h1>Incident Explorer</h1>
 <section class="discrete">
 	<p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="/about/glossary/#serco">Serco</a>, <a href="/about/glossary/#IHMS">IHMS</a> and <a href="/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>
