fixer typos and added links to principles

--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -56,9 +56,9 @@ and pulled apart, rather than just accepted passively, by our users.</p>
 			<h3>References</h3>
 			
 			<ul>
-			<li>“Publish for people, not too them” is a quote from Mandy Brown’s article <cite>Babies and the Bathwater</cite> on contempory publishing.</li>
-			<li><a href="http://isbn.nu/9780143114949" title="Here Comes Everybody on Wikipedia">Here Comes Everyobody, Clay Shirky, 2006</a></li>
-			<li><cite><a href="http://jonathanstray.com/what-should-the-digital-public-sphere-do">What Should The Digital Public Sphere Do?</a>, Jonothan Stray, 2011</cite></li>
+			<li>“Publish for people, not too them” is a quote from <a href="http://aworkinglibrary.com/" title="Mandy Brown's website, A working library">Mandy Brown</a>’s article <cite><a href="http://contentsmagazine.com/articles/babies-and-the-bathwater/" title="Babies and the Bathwater in Contents Magazine.">Babies and the Bathwater</a></cite> on contemporary publishing.</li>
+			<li><a href="http://isbn.nu/9780143114949" title="Here Comes Everybody on Wikipedia">Here Comes Everybody, Clay Shirky, 2006</a></li>
+			<li><cite><a href="http://jonathanstray.com/what-should-the-digital-public-sphere-do">What Should The Digital Public Sphere Do?</a>, Jonathan Stray, 2011</cite></li>
 			</ul>
 		</section>
 		
@@ -114,7 +114,7 @@ receive will be tested on its own merits, and we will strive to avoid the trap o
 		
 		<h2 id="privacy">Be clear on privacy</h2>
 		
-		<h3>Asylum Seakers</h3>
+		<h3>Asylum Seekers</h3>
 
 	<p>We will protect the privacy of asylum seekers who may be exposed to harm or risk.
 		Asylum seekers have a legitimate expectation of privacy in information that may
