added more links

--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -147,8 +147,8 @@ and should be transparent in the ways they engage with journalists and the publi
 		
 		<ul>
 		<li><a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a>.</li>
-		<li>Economist Style Guide</li>
-		<li>The Guardian Editorial Code</li>
+		<li><a href="http://www.economist.com/styleguide/introduction">Economist Style Guide</a></li>
+		<li><a href="http://www.theguardian.com/info/guardian-editorial-code">The Guardian Editorial Code</a></li>
 		<li><a href="http://craigmod.com/journal/subcompact_publishing/#sub_manifesto">Subcompact Publishing Manifesto</a></li>
 		</ul>
     </article>
