--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -3,7 +3,7 @@
 <% description "#{@incident.summary}" %>
 	
 	<nav class="breadcrumbs supporting main">
-		<p><!-- <a href="http://detentionlogs.com.au/data/">Data</a> &gt;  --><a href="/data/incidents/" title="Explore incident records from Australia's immigration detention network">Incidents</a> &gt; <a href="<%=  url_for @incident %>" title="Page for Incident <%= @incident.incident_number %>"><%= @incident.incident_number %></a></p>
+		<p><!-- <a href="http://detentionlogs.com.au/data/">Data</a> &gt;  --><a href="/data/incidents/" title="Explore incident records from Australia's immigration detention network">Incident Reports</a> &gt; <a href="<%=  url_for @incident %>" title="Page for Incident <%= @incident.incident_number %>"><%= @incident.incident_number %></a></p>
 	</nav>
 
 	<article class="incident" role="">
