--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -6,7 +6,7 @@
 		<p><!-- <a href="http://detentionlogs.com.au/data/">Data</a> &gt;  --><a href="/data/incidents/" title="Explore incident records from Australia's immigration detention network">Incident Reports</a> &gt; <a href="<%=  url_for @incident %>" title="Page for Incident <%= @incident.incident_number %>"><%= @incident.incident_number %></a></p>
 	</nav>
 
-	<article class="incident" role="">
+	<article class="incident" role="main">
 	    <section class="incident-primary main">
 	        <h1>Incident <%= @incident.incident_number %></h1>
 	        
