--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -10,10 +10,12 @@
 	    <section class="incident-primary main">
 	        <h1>Incident <%= @incident.incident_number %></h1>
 	        
-	        <% if @incident.detailed_report.path %><em class="detail-report-link"><a href="<%= @incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon discrete distinct-download">See Incident Detail Report [PDF]</a></em>
-          <% elsif !@incident.foi_requests.empty? %>
-            <em class="detail-report-link"><%=link_to_right_to_know(@incident) %></em>
-	        <% else %><em class="detail-report-link"><a href="<%= url_for @incident %>/adopt" title="help get more information about this incident" class="discrete distinct-download">Adopt this incident</a></em>
+	        <% if @incident.detailed_report.path %>
+	        	<em class="detail-report-link"><a href="<%= @incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon discrete distinct-download">See Incident Detail Report [PDF]</a></em>
+            <% elsif !@incident.foi_requests.empty? %>
+                <em class="detail-report-link"><%=link_to_right_to_know(@incident) %></em>
+	        <% else %>
+	        	<em class="detail-report-link"><a href="<%= url_for @incident %>/adopt" title="help get more information about this incident" class="discrete distinct-download">Adopt this incident</a></em>
 	        <% end %>
 	        
 	        
