holder styles for btns at the top of explorer results

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -432,6 +432,23 @@ input:-ms-input-placeholder { color: #555;}
 		margin-bottom: 1rem;
 	} /* h2 styles */
 }
+.btn-link {
+	float: right;
+	margin: 0 0 1em 3%;
+	border: 1px $primary solid;
+	padding: 1%;
+	width: 60%;
+	font-size: .875em;
+	font-weight: normal;
+	text-align: center;
+	text-decoration: none;
+	+ .btn-link {
+		margin-left: 0;
+		width: 35%;
+		float: left;
+		clear: left;
+	}
+}
 /* @end Typography */
 /* @group Page structure */
 .holding {
