fixed link and white space

--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -19,39 +19,18 @@
 		
 		<h2 id="be-open-and-accountable">Be open and accountable</h2>
 		
-		<p>By making ourselves open and transparent we become more accountable for our actions
-		and are held to a high standard. Our community of users deserve to know [who we are
-		and how we work](http:/detentionlogs.com.au/about), just as they deserve to know the
-		details of the operations of government departments and private companies who act on
-		their behalf.</p>
+		<p>By making ourselves open and transparent we become more accountable for our actions and are held to a high standard. Our community of users deserve to <a href="/about">know who we are and how we work</a>, just as they deserve to know the details of the operations of government departments and private companies who act on their behalf.</p>
 
-		<p>Australian government agencies should develop programs to publish data more
-		proactively, to increase accountability of the public service and the public’s
-		engagement with it. <a href="http://agimo.gov.au/files/2013/03/Big-Data-Strategy-Issues-Paper1.pdf">The Department of Finance and Deregulation presented an issues
-		paper on Big Data in March
-		2013</a> which
-		said “Big data allows for more focused and evidence-based policy design” and
-		developing proactive data publishing programs may result in “reduction of fraudulent
-		or criminal activity across both government and private sectors”.</p>
-
-		<p>We aim to encourage proactive publication of immigration detention data and will
-		actively campaign to facilitate this access. To achieve this we will set an example
-		with our own publishing standards. Our data and documents should be available for
-		reuse, republishing and remixing. When making publishing decisions we always start
-		from a default position of openness using a Creative Commons Attribution license,
-		and then adding responsible restrictions if necessary (for example, our
-		investigations text will be available under a Creative Commons Attribution,
-		*Non-Commercial* Share-Alike license).</p>
+		<p>Australian government agencies should develop programs to publish data more proactively, to increase accountability of the public service and the public’s engagement with it. <a href="http://agimo.gov.au/files/2013/03/Big-Data-Strategy-Issues-Paper1.pdf">The Department of Finance and Deregulation presented an issues paper on Big Data in March 2013</a> which said “Big data allows for more focused and evidence-based policy design” and developing proactive data publishing programs may result in “reduction of fraudulent or criminal activity across both government and private sectors”.</p>
+ 
+		<p>We aim to encourage proactive publication of immigration detention data and will actively campaign to facilitate this access. To achieve this we will set an example with our own publishing standards. Our data and documents should be available for reuse, republishing and remixing. When making publishing decisions we always start from a default position of openness using a Creative Commons Attribution license, and then adding responsible restrictions if necessary (for example, our investigations text will be available under a Creative Commons Attribution, Non-Commercial Share-Alike license where possible).</p>
 		
 
 		<h2 id="publish-for-people-not-to-them">Publish <em>for</em> people, not <em>to</em> them</h2>
 		
-		<p>The primary goal of Detention Logs is to provide the public with the facts they need
-to better understand the reality of Australia’s immigration detention network.
-Across our editorial, design and publishing practices, we judge the success of our
-choices against how our work is used to support more informed policy discussion and
-challenge inhumane policy based on spin. We provide information to be engaged with
-and pulled apart, rather than just accepted passively, by our users.</p>
+		<p>The primary goal of Detention Logs is to provide the public with the facts they need to better understand the reality of Australia’s immigration detention network.
+Across our editorial, design and publishing practices, we judge the success of our choices against how our work is used to support more informed policy discussion and
+challenge inhumane policy based on spin. We provide information to be engaged with and pulled apart, rather than just accepted passively, by our users.</p>
 		<section class="references discrete">
 			<h3>References</h3>
 			
@@ -64,19 +43,13 @@ and pulled apart, rather than just accepted passively, by our users.</p>
 		
 		<h2 id="were-all-in-this-together">We’re all in this together</h2>
 		
-		<p>Detention Logs is part of a growing community of individuals and institutions that
-are committed to enhancing transparency in governments around the world. Our
-particular focus is on Australia’s immigration detention centres, which have long
-been shielded from public scrutiny. The Department of Immigration and Citizenship,
-and the private organisations that work on their behalf, should be accountable to
-the public for their actions. </p>
+		<p>Detention Logs is part of a growing community of individuals and institutions that are committed to enhancing transparency in governments around the world. Our
+particular focus is on Australia’s immigration detention centres, which have long been shielded from public scrutiny. The Department of Immigration and Citizenship,
+and the private organisations that work on their behalf, should be accountable to the public for their actions. </p>
 		
-		<p>Our mission and methods are drawn from the ideas of pioneering organisations and
-individuals. Credit should be given where it’s due. Our major influences include
-Wikileaks, ProPublica, Heather Brooke, Clay Shirky, Open Australia, Edward Tufte,
-Jeremy Keith, Robert Rosenthal.  We’ve received
-extremely generous support when we’ve asked and would love to return the favour to
-anyone looking to learn more or user our information.</p>
+		<p>Our mission and methods are drawn from the ideas of pioneering organisations and individuals. Credit should be given where it’s due. Our major influences include
+Wikileaks, ProPublica, Heather Brooke, Clay Shirky, Open Australia, Edward Tufte, Jeremy Keith, Robert Rosenthal.  We’ve received
+extremely generous support when we’ve asked and would love to return the favour to anyone looking to learn more or user our information.</p>
 		
 		
 		<section class="references discrete">
@@ -90,55 +63,34 @@ anyone looking to learn more or user our information.</p>
 		
 		<h2 id="think-long-term">Think long-term</h2>
 		
-		<p>What new uses and meanings will the information we publish today have in 5, 20 or
-100 years? Similar records from just a century ago are treasured by historians and
+		<p>What new uses and meanings will the information we publish today have in 5, 20 or 100 years? Similar records from just a century ago are treasured by historians and
 researchers for providing insight into our society’s past attitudes and policies.</p>
 		
-		<p>We can’t predict how our work will be used in the future, so we aim to support as
-wide a potential for use as possible. In our explanations we will be as clear as
-possible and not assume prior knowledge. We will protect our URLs and attempt to
-support groups like Trove, Internet Archive and Pandora in archiving our work for
-long term accessibility.</p>
+		<p>We can’t predict how our work will be used in the future, so we aim to support as wide a potential for use as possible. In our explanations we will be as clear as
+possible and not assume prior knowledge. We will protect our URLs and attempt to support groups like Trove, Internet Archive and Pandora in archiving our work for long term accessibility.</p>
 		
 		<h2 id="false-balance-is-not-fairness">False balance is not fairness</h2>
 		
-	<p>Our reporting aims to uncover the truth about events in immigration detention and
-provide a voice for marginalised asylum seekers and refugees through rigorous
-investigation.  Our reporting efforts will draw on the data we have obtained and
-other sources to verify it’s accuracy.</p>
-		<p>Fairness in reporting doesn’t mean that our reports will always be balanced.  We
-won’t publish statements from government agencies, corporations or other entities
-simply to fill page space if those statements have low value. Every statement we
-receive will be tested on its own merits, and we will strive to avoid the trap of
-“false balance”. </p>
+	<p>Our reporting aims to uncover the truth about events in immigration detention and provide a voice for marginalised asylum seekers and refugees through rigorous
+investigation.  Our reporting efforts will draw on the data we have obtained and other sources to verify it’s accuracy.</p>
+		<p>Fairness in reporting doesn’t mean that our reports will always be balanced. We won’t publish statements from government agencies, corporations or other entities
+simply to fill page space if those statements have low value. Every statement we receive will be tested on its own merits, and we will strive to avoid the trap of “false balance”.</p> 
 		
 		<h2 id="privacy">Be clear on privacy</h2>
 		
 		<h3>Asylum Seekers</h3>
 
-	<p>We will protect the privacy of asylum seekers who may be exposed to harm or risk.
-		Asylum seekers have a legitimate expectation of privacy in information that may
-		identify them, and we will respect that expectation in our reporting. But in
-		circumstances where asylum seekers consent to the use of identifying information,
-		and where there is a public interest in it’s release, we will publish personal
-		details.</p>
+	<p>We will protect the privacy of asylum seekers who may be exposed to harm or risk. Asylum seekers have a legitimate expectation of privacy in information that may identify them, and we will respect that expectation in our reporting. But in circumstances where asylum seekers consent to the use of identifying information, and where there is a public interest in it’s release, we will publish personal details.</p>
 
 		<h3>Sources and Government Spokespeople</h3>
 
-		<p>Aim to attribute information to its source.  Where a source seeks anonymity, do
-		not agree without first considering the source's motives and any alternative
-		attributable source.  Where confidences are accepted,  respect them in all
-		circumstances. See <a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a></p>
+		<p>Aim to attribute information to its source.  Where a source seeks anonymity, do not agree without first considering the source's motives and any alternative attributable source.  Where confidences are accepted, respect them in all circumstances. See <a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a></p>
 
-		<p>Source protection is an inviolable principle of journalism. We will never betray
-		anonymity we grant to sources.</p>
+		<p>Source protection is an inviolable principle of journalism. We will never betray anonymity we grant to sources.</p>
 
-		<p>We will not grant anonymity to government spokespersons. If a person is speaking on
-behalf of a government minister or agency then they should be accountable for those
-statements. With anonymity can come deniability—official spokespersons should not be
-able to deny statements they have made in response to inquiries by the public. There
-is an expectation that anything a spokesperson says is on the record, unless
-explicitly stated otherwise. Public servants wield considerable power in our society
+		<p>We will not grant anonymity to government spokespersons. If a person is speaking on behalf of a government minister or agency then they should be accountable for those
+statements. With anonymity can come deniability—official spokespersons should not be able to deny statements they have made in response to inquiries by the public. There
+is an expectation that anything a spokesperson says is on the record, unless explicitly stated otherwise. Public servants wield considerable power in our society
 and should be transparent in the ways they engage with journalists and the public.</p>
 
 
