--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -2,29 +2,16 @@
 <% description "Explore an index of 'incident reports' recorded by staff at Australia’s immigration detention facilities." %>
 <section class="main incident-explorer" role="main">
 
-<% if params[:incident_type] %>
-	<%= link_to 'About incident reports', page_path('data/incidents/about'), class: "btn-link" %>
-	<h2 class="btn-link">Show filters</h2>
-	<div style="display: none;">
-		<%= render 'layouts/incident_filters' %>
-	</div>
-	<p>Incident Explorer results:</p>
-	<h1 class="loud query-results-description" id="#results">
-		<strong class="query-count"><%= @incidents.total_count %></strong> <% if params[:incident_type].present? %><strong class="type">&lsquo;<%= params[:incident_type] %>&rsquo;</strong><% end %> incident reports <% if @location_name %>from <strong class="location"><%= @location_name %></strong><% end %> between <strong class="start-date"><%=@start_date.strftime("%d %b %Y") %></strong> and <strong class="end-date"><%=@end_date.strftime("%d %b %Y") %>.</strong>
-	</h1>
-<% else %>
-	<h1>Incident Explorer</h1>
+<h1>Incident Explorer</h1>
 
-	<section class="filters">
-		<p class="lede">Incident Reports are the Australian Government's official records of things that happen to people in immigration detention, as recorded by detention centre staff. Use the filters below to explore the database. <%= link_to 'About Incident Reports.', page_path('data/incidents/about'), title: "Read more information about Incident Reports and where this data came from." %></p>
-	
-		<%= render 'layouts/incident_filters' %>
-	</section>
-	<h2 class="distinct query-results-description" id="#results">
-		<strong class="query-count"><%= @incidents.total_count %></strong> <% if params[:incident_type] %><strong class="type">&lsquo;<%= params[:incident_type] %>&rsquo;</strong><% end %> incident reports <% if @location_name %>from <strong class="location"><%= @location_name %></strong><% end %> between <strong class="start-date"><%=@start_date.strftime("%d %b %Y") %></strong> and <strong class="end-date"><%=@end_date.strftime("%d %b %Y") %>.</strong>
-	</h2>
+<section class="filters">
+	<p class="lede">Incident Reports are records of events that occur in immigration detention, recorded by detention centre staff for the Australian Government. <%= link_to 'About Incident Reports.', page_path('data/incidents/about'), title: "Read more information about Incident Reports and where this data came from." %></p>
 
-<% end %>
+	<%= render 'layouts/incident_filters' %>
+</section>
+<h2 class="distinct query-results-description" id="results">
+	<strong class="query-count"><%= @incidents.total_count %></strong> <% if params[:incident_type] %><strong class="type"><%= params[:incident_type] %></strong><% end %> incident reports <% if params[:by_detailed_report] %>with attatched <strong>Incident Detail Reports</strong> <% end %><% if @location_name %>from <strong class="location"><%= @location_name %></strong><% end %> between <strong class="start-date"><%= @start_date.strftime("%d %b %Y") %></strong> and <strong class="end-date"><%=@end_date.strftime("%d %b %Y") %>.</strong>
+</h2>
 
 <p><a href="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" title="url to share or bookmark these results" class="page-link supporting">Permalink for these results</a></p>
 
@@ -37,14 +24,15 @@
 		<li class="incident-secondary">
 			<div class="incident-location-details">Location Details</div>
 			<div class="incident-number">Incident Number</div>
-		</li>			
+		</li>
 	</ul>
+
 	<ul class="incident-list">
 		<% @incidents.each do |incident| %>
-	
+
 		<li class="supporting">
 			<article class="incident-item <% if incident.detailed_report.path %>has-detailed-report<% end %>">
-	
+
 				<section class="incident-primary">
 					<span class="field-label">Occured On</span><time class="incident-occured-on"><% if incident.occured_on %><%= incident.occured_on.strftime("%d %b %Y %H:%M") %><% end %></time>
 					<span class="field-label">Type</span><section class="incident-type"><%= incident.incident_type %></section>
@@ -60,9 +48,8 @@
 				</section>
 			</article>
 		</li>
-	
+
 		<% end %>
-		
 	</ul>
 </section>
 <div class="pagination-details"><%=  page_entries_info @incidents %></div>
