--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,13 +18,13 @@
     <body class="home">
     <section role="main" class="reading main">
     	<h1 class="logo"><a href="" rel="home">Detention Logs<span> beta</span></a></h1>
-	    <p class="lede">A new project supporting deeper community knowledge of and accountability
-for conditions in Australia's immigration detention network. We publish data, documents and investigations that reveal new perspectives on conditions and events inside immigration detention.</p>
 	    <p class="distinct"><strong>Access the <a href="/data/incidents">data</a>.</strong></p>
 	    <p class="distinct"><strong>Follow our <a href="/investigations">investigations</a>.</strong></p>
 	    <p class="distinct"><strong>Learn more about the <a href="/about">project</a>.</strong></p>
 	    <p class="distinct"><strong>Find out how you can <a href="/contribute">contribute</a>.</strong></p>
 	    <p class="discrete">Follow <a href="http://twitter.com/detentionlogs">@DetentionLogs</a> for updates</p>
+	    <p class="lede">We publish data, documents and investigations that reveal new perspectives on conditions and events inside immigration detention. Detention Logs supports deeper community knowledge of and accountability
+for conditions in Australia's immigration detention network.</p>
     </section>
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" id="navigation">
