add breadcrumb to about incidents

--- a/app/views/pages/about_incidents.html.erb
+++ b/app/views/pages/about_incidents.html.erb
@@ -3,6 +3,10 @@
 
 <%= render 'layouts/header' %>
 
+    <nav class="breadcrumbs supporting main">
+        <p><a href="/data/incidents/" title="Explore incident records from Australia's immigration detention network">Incident Reports</a> &gt; About Incident Reports</p>
+    </nav>
+
     <article role="main" class="main reading">
 		<h1>What are Incident Reports?</h1>
 
